# laba4

./: CMakeLists.txt
.github/workflows/: main.yml
formatter_ex_lib/: CMakeLists.txt  Makefile  cmake_install.cmake  formatter_ex.h
formatter_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
